Version 2.02.175 - 
======================================
  lvconvert --repair respects --poolmetadataspare option.

Version 2.02.174 - 13th September 2017
======================================
  Prevent raid1 split with trackchanges in a shared VG.
  Avoid double unlocking of client & lockspace mutexes in lvmlockd.
  Fix leaking of file descriptor for non-blocking filebased locking.
  Fix check for 2nd mda at end of disk fits if using pvcreate --restorefile.
  Use maximum metadataarea size that fits with pvcreate --restorefile.
  Always clear cached bootloaderarea when wiping label e.g. in pvcreate.
  Disallow --bootloaderareasize with pvcreate --restorefile.
  Fix lvmlockd check for running lock managers during lock adoption.
  Add --withgeneralpreamble and --withlocalpreamble to lvmconfig.
  Improve makefiles' linking.
  Fix some paths in generated makefiles to respected configured settings.
  Add warning when creating thin-pool with zeroing and chunk size >= 512KiB.
  Introduce exit code 4 EINIT_FAILED to replace -1 when initialisation fails.
  Add synchronization points with udev during reshape of raid LVs.

Version 2.02.173 - 20th July 2017
=================================
  Add synchronization points with udev during conversion of raid LVs.
  Improve --size args validation and report more detailed error message.
  Initialize debugging mutex before any debug message in clvmd.
  Log error instead of warn when noticing connection problem with lvmetad.
  Fix memory leak in lvmetad when working with duplicates.
  Remove restrictions on reshaping open and clustered raid devices.
  Add incompatible data_offset to raid metadata to fix reshape activation.
  Accept 'lvm -h' and 'lvm --help' as well as 'lvm help' for help.
  Suppress error message from accept() on clean lvmetad shutdown.
  Tidy clvmd client list processing and fix segfaults.
  Protect clvmd debug log messages with mutex and add client id.
  Fix shellcheck reported issues for script files.
